fix(Nav): icon-only overflow bug fix

--- a/src/nav/main.scss
+++ b/src/nav/main.scss
@@ -314,11 +314,20 @@
             opacity: 0;
         }
 
+        &.#{$css-prefix}normal {
+            #{$nav-prefix}-icon.#{$css-prefix}icon {
+                @include icon-size(
+                    $size: $nav-icon-only-font-size,
+                    $marginLeft: (18px - $nav-icon-only-font-size) / 2,
+                    $marginRight: (18px - $nav-icon-only-font-size) / 2
+                );
+            }
+        }
         #{$nav-prefix}-icon.#{$css-prefix}icon {
             @include icon-size(
                 $size: $nav-icon-only-font-size,
-                $marginLeft: (18px - $nav-icon-only-font-size) / 2,
-                $marginRight: 0
+                $marginLeft: (20px - $nav-icon-only-font-size) / 2,
+                $marginRight: (20px - $nav-icon-only-font-size) / 2
             );
         }
 
